no more axios, except for showcase

--- a/docs/locales/pt/LC_MESSAGES/chapter-08.po
+++ b/docs/locales/pt/LC_MESSAGES/chapter-08.po
@@ -86,15 +86,15 @@ msgstr "A acção acima referida é exposto como:"
 msgid ""
 "**About request.POST**: keep in mind that **request.POST** only contains "
 "the form data that is posted using a **regular HTML-form** or javascript "
-"**FormData** object. If you post just plain object (e.g. ``axios."
-"post( 'path/to/api', {field:'some'} )``) you should pass **request.json** "
+"**FormData** object. If you post just plain object (e.g. 
+"Q.post( 'path/to/api', {field:'some'} )``) you should pass **request.json** "
 "instead of request.POST, since latter will contain just raw request-body "
 "which is string, not json. See bottle.py documentation for more details."
 msgstr ""
 "** Sobre request.POST **: Manter em mente que ** ** request.POST contém "
 "apenas os dados do formulário que é publicado utilizando um formulário HTML "
 "normal ** ** ou javascript ** FormData ** objeto. Se você postar apenas "
-"objeto simples (por exemplo, `` axios.post ( 'path / to / api', {campo: "
+"objeto simples (por exemplo, ``Q.post ( 'path / to / api', {campo: "
 "'alguns'}) ``) você deve passar request.json ** ** em vez de request.POST, "
 "desde Este último irá conter request-corpo apenas cru que é corda, não "
 "json. Consulte a documentação bottle.py para mais detalhes."
