fixed reference to cache.ram->cache.get

--- a/docs/locales/pt/LC_MESSAGES/chapter-07.po
+++ b/docs/locales/pt/LC_MESSAGES/chapter-07.po
@@ -3558,11 +3558,11 @@ msgstr "cache, em cache"
 #: ../../chapter-07.rst:2216
 msgid ""
 "An example use which gives much faster selects is: ``rows = db(query)."
-"select(cache=(cache.ram, 3600), cacheable=True)``:python Look at *Caching "
+"select(cache=(cache.get, 3600), cacheable=True)``:python Look at *Caching "
 "selects* section in this chapter, to understand what the trade-offs are."
 msgstr ""
 "Um uso exemplo que dá muito mais rápido seleciona é: `` linhas = db "
-"(query) .Select (cache = (cache.ram, 3600), cacheable = True) ``: Olhar "
+"(query) .Select (cache = (cache.get, 3600), cacheable = True) ``: Olhar "
 "python na seção * * Caching seleciona neste capítulo, para entender o que "
 "os trade-offs são."
 
@@ -5315,12 +5315,12 @@ msgstr "Selects com cache"
 msgid ""
 "The select method also takes a ``cache`` argument, which defaults to None. "
 "For caching purposes, it should be set to a tuple where the first element "
-"is the cache model (``cache.ram``, ``cache.disk``, etc.), and the second "
+"is the cache model (``cache.get`` when using py4web), and the second "
 "element is the expiration time in seconds."
 msgstr ""
 "O método de seleção também leva um argumento cache`` ``, cujo padrão é "
 "None. Para fins de armazenamento em cache, deve ser definido como um tuplo "
-"em que o primeiro elemento é o modelo do cache ( `` cache.ram``, `` cache."
+"em que o primeiro elemento é o modelo do cache ( `` cache.get``, `` cache."
 "disk``, etc), e o segundo elemento é o tempo de validade em segundo ."
 
 #: ../../chapter-07.rst:4046
